k8s/argocd-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-application-controller
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-application-controller
  template:
    metadata:
      labels:
        app: argocd-application-controller
    spec:
      serviceAccountName: argocd-application-controller
      containers:
      - name: argocd-application-controller
        image: argoproj/argocd:latest
        command:
        - argocd-application-controller
        args:
        - --repo-server
        - argocd-repo-server.argocd.svc.cluster.local:8081
        - --status-processors
        - "20"
        - --operation-processors
        - "10"
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-repo-server
  template:
    metadata:
      labels:
        app: argocd-repo-server
    spec:
      containers:
      - name: argocd-repo-server
        image: argoproj/argocd:latest
        command:
        - argocd-repo-server
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        - containerPort: 8084
          name: https
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-server
  template:
    metadata:
      labels:
        app: argocd-server
    spec:
      serviceAccountName: argocd-server
      containers:
      - name: argocd-server
        image: argoproj/argocd:latest
        command:
        - argocd-server
        args:
        - --repo-server
        - argocd-repo-server.argocd.svc.cluster.local:8081
        - --staticassets
        - /shared/app
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
