k8s/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager
  template:
    metadata:
      labels:
        app: cert-manager
    spec:
      serviceAccountName: cert-manager
      containers:
      - name: cert-manager
        image: cert-manager/cert-manager-controller:v1.13.0
        args:
        - --cluster-resource-namespace=cert-manager
        - --leader-elect=false
        ports:
        - containerPort: 9402
          name: http-metrics
          protocol: TCP
